Adding Loading and Skeleton to SubjectList

--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,10 @@
     @apply text-xl font-normal font-sans text-white;
   }
 
+  .subject-box {
+    @apply flex flex-col flex-shrink-0 w-[250px] h-36 bg-white/15 backdrop-blur-md border border-white/30 rounded-lg shadow-md p-4 mx-1 hover:scale-[1.03] hover:shadow-lg transition-transform duration-200 justify-between;
+  }
+
   .course-box {
     @apply flex flex-col flex-shrink-0 h-32 bg-white/15 backdrop-blur-md border border-white/30 rounded-lg shadow-md p-4 mx-1 hover:scale-[1.03] hover:shadow-lg transition-transform duration-200 justify-between hover:cursor-pointer;
   }
